--- a/testing.ipynb
+++ b/testing.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,6 +655,179 @@
    "source": [
     "phila_rev.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['overall', 'verified', 'reviewTime', 'reviewerID', 'asin', 'style',\n",
+       "       'reviewerName', 'reviewText', 'summary', 'unixReviewTime', 'vote',\n",
+       "       'image'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "teste = pd.read_json(\"preprocess_data/.data/AMAZON_FASHION_5.json\", lines=True)\n",
+    "teste.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>OyoGAe7OKpv6SyGZT5g77Q</td>\n",
+       "      <td>7ATYjTIgM3jUlt4UM3IypQ</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>I've taken a lot of spin classes over the year...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>_7bHUi9Uuf5__HHc_Q8guQ</td>\n",
+       "      <td>kxX2SOes4o-D3ZQBkiMRfA</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Wow!  Yummy, different,  delicious.   Our favo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>eUta8W_HdHMXPzLBBZhL1A</td>\n",
+       "      <td>04UD14gamNjLY0IDYVhHJg</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>I am a long term frequent customer of this est...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>smOvOajNG0lS4Pq7d8g4JQ</td>\n",
+       "      <td>RZtGWDLCAtuipwaZ-UfjmQ</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Good food--loved the gnocchi with marinara\\nth...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Dd1jQj7S-BFGqRbApFzCFw</td>\n",
+       "      <td>YtSqYv1Q_pOltsVPSx54SA</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Tremendous service (Big shout out to Douglas) ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        0                       1    2  \\\n",
+       "0  OyoGAe7OKpv6SyGZT5g77Q  7ATYjTIgM3jUlt4UM3IypQ  5.0   \n",
+       "1  _7bHUi9Uuf5__HHc_Q8guQ  kxX2SOes4o-D3ZQBkiMRfA  5.0   \n",
+       "2  eUta8W_HdHMXPzLBBZhL1A  04UD14gamNjLY0IDYVhHJg  1.0   \n",
+       "3  smOvOajNG0lS4Pq7d8g4JQ  RZtGWDLCAtuipwaZ-UfjmQ  4.0   \n",
+       "4  Dd1jQj7S-BFGqRbApFzCFw  YtSqYv1Q_pOltsVPSx54SA  5.0   \n",
+       "\n",
+       "                                                   3  \n",
+       "0  I've taken a lot of spin classes over the year...  \n",
+       "1  Wow!  Yummy, different,  delicious.   Our favo...  \n",
+       "2  I am a long term frequent customer of this est...  \n",
+       "3  Good food--loved the gnocchi with marinara\\nth...  \n",
+       "4  Tremendous service (Big shout out to Douglas) ...  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "philla = pd.read_csv(\"preprocess_data/.data/Philladelphia.csv\", sep='\\t', header=None)\n",
+    "philla.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_as_json_for_bert(path, name):\n",
+    "    df = pd.read_csv(path, sep='\\t', header=None)\n",
+    "\n",
+    "    df.columns = [\"reviewerID\", \"asin\", \"overall\", \"reviewText\"]\n",
+    "\n",
+    "    x = df.to_json(orient='records')\n",
+    "    parsed = json.loads(x)\n",
+    "\n",
+    "    f = open(f\"preprocess_data/.data/{name}.json\", \"w\")\n",
+    "\n",
+    "    for dicionário in parsed:\n",
+    "        json_string = json.dumps(dicionário)\n",
+    "        f.write(json_string + \"\\n\")\n",
+    "\n",
+    "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_as_json_for_bert(\"preprocess_data/.data/Tampa.csv\", \"Tampa\")\n",
+    "save_as_json_for_bert(\"preprocess_data/.data/Philladelphia.csv\", \"Philladelphia\")\n",
+    "save_as_json_for_bert(\"preprocess_data/.data/Tucson.csv\", \"Tucson\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
