--- a/testing.ipynb
+++ b/testing.ipynb
@@ -6,115 +6,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch \n",
-    "import torch.nn.functional as F"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rep = np.load(\"ZeroShot/All_Beauty_5_zeroshot.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[-1.8710e+00, -1.0877e+00, -2.4461e-01,  ...,  9.5277e-01,\n",
-       "           2.4916e+00, -1.1813e+00],\n",
-       "         [ 4.8908e-01, -1.5438e+00,  1.1630e+00,  ..., -1.0864e-01,\n",
-       "          -1.3692e+00, -3.5051e-01],\n",
-       "         [-9.7979e-01, -5.8967e-01,  5.4338e-02,  ..., -9.8899e-01,\n",
-       "          -4.6536e-01, -3.4412e-02],\n",
-       "         ...,\n",
-       "         [-1.9306e-01, -6.7972e-01, -3.6876e-01,  ..., -6.4601e-01,\n",
-       "           8.7687e-02,  2.8251e-01],\n",
-       "         [ 8.1259e-01, -8.3520e-02,  7.6828e-01,  ...,  1.3538e-02,\n",
-       "          -1.0519e+00,  1.1976e-01],\n",
-       "         [ 3.7449e-01, -2.5942e-01,  1.0785e+00,  ..., -1.2454e+00,\n",
-       "          -3.8538e-01, -1.0500e+00]],\n",
-       "\n",
-       "        [[-4.3624e+00,  2.5205e+00,  1.7421e-01,  ..., -3.1031e+00,\n",
-       "          -5.6478e-01,  2.7436e+00],\n",
-       "         [-3.7902e-01, -5.8769e-01,  7.4534e-02,  ..., -7.7646e-01,\n",
-       "          -1.7398e+00, -1.3992e+00],\n",
-       "         [-7.2495e-01,  1.9109e+00,  8.8269e-01,  ..., -2.1507e+00,\n",
-       "          -2.5480e+00,  1.7521e+00],\n",
-       "         ...,\n",
-       "         [-9.8692e-01, -2.9926e-01, -2.2122e-01,  ...,  2.2664e-01,\n",
-       "           1.0494e+00, -1.0999e+00],\n",
-       "         [ 1.3692e+00, -5.2960e-01,  2.0832e+00,  ..., -1.0089e+00,\n",
-       "          -9.1966e-01,  1.5139e+00],\n",
-       "         [-1.9581e+00,  1.3351e+00, -5.4363e-01,  ...,  8.6855e-01,\n",
-       "           1.4097e+00, -1.9981e+00]],\n",
-       "\n",
-       "        [[-4.6955e-02, -2.5460e-02, -1.1238e-01,  ...,  5.3904e-02,\n",
-       "           1.1507e-01,  1.1562e-01],\n",
-       "         [ 5.6922e-02, -1.7376e-01, -2.5638e-02,  ...,  3.5309e-02,\n",
-       "           5.8086e-02,  1.4796e-01],\n",
-       "         [-1.8185e-01,  1.6056e-01, -1.5065e-01,  ..., -3.5514e-03,\n",
-       "          -1.0320e-01,  1.8630e-01],\n",
-       "         ...,\n",
-       "         [ 5.9396e-03, -3.9017e-02, -1.1095e-01,  ...,  1.3538e-01,\n",
-       "           1.9153e-01, -9.2778e-02],\n",
-       "         [ 4.8815e-02,  8.0863e-02,  2.8549e-01,  ..., -3.0590e-02,\n",
-       "          -1.2658e-01,  1.0461e-01],\n",
-       "         [-5.6061e-02, -1.5833e-02,  1.5494e-02,  ...,  7.8001e-02,\n",
-       "           7.9148e-02,  6.2661e-03]],\n",
-       "\n",
-       "        ...,\n",
-       "\n",
-       "        [[ 5.4149e-01, -3.0621e-01, -2.7876e-01,  ...,  4.0197e-01,\n",
-       "           9.6103e-02, -4.9997e-01],\n",
-       "         [-1.6590e-01,  8.2676e-02,  5.1491e-02,  ..., -2.5208e-01,\n",
-       "           9.3487e-03, -1.5387e-02],\n",
-       "         [ 8.3153e-02, -8.6744e-02, -7.4215e-02,  ..., -7.6189e-02,\n",
-       "          -1.2759e-01, -7.7682e-02],\n",
-       "         ...,\n",
-       "         [-3.3132e-01, -1.9908e-01,  4.9923e-01,  ...,  4.0887e-01,\n",
-       "          -3.1604e-02,  1.0306e-01],\n",
-       "         [ 7.0482e-02,  7.8750e-02,  2.9105e-01,  ...,  1.6628e-01,\n",
-       "          -2.7062e-01, -5.0101e-01],\n",
-       "         [ 8.8637e-01,  3.8617e-02, -7.5123e-02,  ..., -2.8341e-03,\n",
-       "          -4.7050e-02,  7.2550e-01]],\n",
-       "\n",
-       "        [[ 4.4483e-01, -3.7435e-01, -2.4294e-01,  ..., -1.0775e-01,\n",
-       "          -6.5483e-01, -3.0781e-01],\n",
-       "         [ 2.7356e-01, -3.4959e-01, -4.6316e-01,  ...,  1.2175e-01,\n",
-       "           5.6455e-01,  6.5356e-01],\n",
-       "         [ 1.6346e-01,  1.4659e-01, -3.5736e-01,  ...,  1.4114e-01,\n",
-       "           8.1453e-02,  9.4667e-02],\n",
-       "         ...,\n",
-       "         [-5.1457e-02, -1.7653e-01,  1.0345e-01,  ..., -5.8467e-01,\n",
-       "          -7.1658e-01, -1.4005e+00],\n",
-       "         [ 9.2548e-01,  1.5902e-01,  5.0650e-01,  ..., -1.0284e-01,\n",
-       "           7.1864e-01, -8.1607e-01],\n",
-       "         [-8.2853e-01,  3.9063e-01,  5.2719e-01,  ..., -7.6208e-01,\n",
-       "           2.5733e-01, -3.7636e-01]],\n",
-       "\n",
-       "        [[ 9.2554e-01,  2.5926e-01, -2.2275e-02,  ...,  1.3079e+00,\n",
-       "           5.7112e-01, -9.9113e-01],\n",
-       "         [ 7.3850e-01,  2.2763e-01,  2.1320e+00,  ..., -2.5308e+00,\n",
-       "           7.4194e-01, -1.5833e+00],\n",
-       "         [-5.3605e+00, -3.0258e+00,  1.1795e+00,  ..., -3.6140e+00,\n",
-       "           3.3178e-01, -2.0886e+00],\n",
-       "         ...,\n",
-       "         [ 8.5797e-01,  1.4228e+00, -1.5053e+00,  ...,  9.4859e-01,\n",
-       "          -1.1190e+00,  7.3298e-01],\n",
-       "         [ 1.6035e+00, -2.6509e-01,  9.1451e-01,  ...,  7.3646e-01,\n",
-       "          -1.8372e+00, -2.3298e+00],\n",
-       "         [ 1.1035e+00, -2.2178e+00,  1.0444e+00,  ..., -2.3665e-01,\n",
-       "          -1.7608e+00, -2.6932e-01]]])"
+       "(5269, 768)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t1 = torch.randn(128, 500, 300)\n",
-    "t2 = torch.randn(128)\n",
-    "\n",
-    "t1 * t2.unsqueeze(1).unsqueeze(2)"
+    "rep.shape"
    ]
   },
   {
@@ -833,25 +754,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, _ = load_svmlight_file(\"ZeroShot/Office_Products_5/zeroshot/X_bert.gz\")"
+    "X, _ = load_svmlight_file(\"ZeroShot/Musical_Instruments_5/zeroshot/X_bert.gz\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(169781, 768)"
+       "(0, 1)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
