Diversity metrics implemented.

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -13,13 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_error_and_rank_metrics(algorithms, dataset, emb, path=\"results/\"):\n",
     "\n",
-    "    labels = ['MSE', 'MAE', 'RMSE', 'PRECISION', 'RECALL', 'NDCG']\n",
+    "    labels = ['MSE', 'MAE', 'RMSE', 'PRECISION', \n",
+    "              'RECALL', 'NDCG', 'DIVERSITY', 'NOVELTY']\n",
     "    max_metrics = []\n",
     "\n",
     "\n",
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -78,178 +79,87 @@
        "      <th>PRECISION</th>\n",
        "      <th>RECALL</th>\n",
        "      <th>NDCG</th>\n",
+       "      <th>DIVERSITY</th>\n",
+       "      <th>NOVELTY</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>A3NCF</th>\n",
-       "      <td>0.492633</td>\n",
-       "      <td>0.472287</td>\n",
-       "      <td>0.694012</td>\n",
-       "      <td>0.799321</td>\n",
-       "      <td>0.224311</td>\n",
-       "      <td>0.008065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ALFM</th>\n",
-       "      <td>0.492714</td>\n",
-       "      <td>0.479093</td>\n",
-       "      <td>0.694209</td>\n",
-       "      <td>0.799321</td>\n",
-       "      <td>0.224311</td>\n",
-       "      <td>0.008065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ANR</th>\n",
-       "      <td>0.378727</td>\n",
-       "      <td>0.372666</td>\n",
-       "      <td>0.608295</td>\n",
-       "      <td>0.488885</td>\n",
-       "      <td>0.286137</td>\n",
-       "      <td>0.008065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CARL</th>\n",
-       "      <td>0.324383</td>\n",
-       "      <td>0.336193</td>\n",
-       "      <td>0.561965</td>\n",
-       "      <td>0.501966</td>\n",
-       "      <td>0.331138</td>\n",
-       "      <td>0.008065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CARP</th>\n",
-       "      <td>0.301829</td>\n",
-       "      <td>0.315592</td>\n",
-       "      <td>0.541544</td>\n",
-       "      <td>0.511101</td>\n",
-       "      <td>0.366385</td>\n",
-       "      <td>0.008065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>D_ATTN</th>\n",
-       "      <td>0.347469</td>\n",
-       "      <td>0.347267</td>\n",
-       "      <td>0.582711</td>\n",
-       "      <td>0.480901</td>\n",
-       "      <td>0.303541</td>\n",
-       "      <td>0.008065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DAML</th>\n",
-       "      <td>0.382040</td>\n",
-       "      <td>0.403402</td>\n",
-       "      <td>0.541493</td>\n",
-       "      <td>0.685174</td>\n",
-       "      <td>0.614226</td>\n",
-       "      <td>0.142857</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>DeepCoNN</th>\n",
-       "      <td>0.346628</td>\n",
-       "      <td>0.384375</td>\n",
-       "      <td>0.582662</td>\n",
-       "      <td>0.462725</td>\n",
-       "      <td>0.318944</td>\n",
-       "      <td>0.008065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HRDR</th>\n",
-       "      <td>0.320256</td>\n",
-       "      <td>0.336097</td>\n",
-       "      <td>0.558634</td>\n",
-       "      <td>0.497728</td>\n",
-       "      <td>0.332630</td>\n",
-       "      <td>0.008065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MPCN</th>\n",
-       "      <td>0.405369</td>\n",
-       "      <td>0.421038</td>\n",
-       "      <td>0.629690</td>\n",
-       "      <td>0.525309</td>\n",
-       "      <td>0.260806</td>\n",
-       "      <td>0.008065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NARRE</th>\n",
-       "      <td>0.320794</td>\n",
-       "      <td>0.344617</td>\n",
-       "      <td>0.559243</td>\n",
-       "      <td>0.497137</td>\n",
-       "      <td>0.345259</td>\n",
-       "      <td>0.008065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ConvMF</th>\n",
-       "      <td>0.410501</td>\n",
-       "      <td>0.452003</td>\n",
-       "      <td>0.634435</td>\n",
-       "      <td>0.524938</td>\n",
-       "      <td>0.274006</td>\n",
-       "      <td>0.008065</td>\n",
+       "      <td>0.093489</td>\n",
+       "      <td>0.215620</td>\n",
+       "      <td>0.302413</td>\n",
+       "      <td>0.825238</td>\n",
+       "      <td>0.831091</td>\n",
+       "      <td>0.351415</td>\n",
+       "      <td>0.099673</td>\n",
+       "      <td>0.017857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TARMF</th>\n",
-       "      <td>0.375877</td>\n",
-       "      <td>0.460916</td>\n",
-       "      <td>0.608146</td>\n",
-       "      <td>0.460487</td>\n",
-       "      <td>0.338542</td>\n",
-       "      <td>0.008065</td>\n",
+       "      <td>0.146350</td>\n",
+       "      <td>0.279438</td>\n",
+       "      <td>0.378518</td>\n",
+       "      <td>0.726705</td>\n",
+       "      <td>0.717131</td>\n",
+       "      <td>0.355217</td>\n",
+       "      <td>0.101449</td>\n",
+       "      <td>0.026786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ConvMF</th>\n",
+       "      <td>0.617585</td>\n",
+       "      <td>0.613137</td>\n",
+       "      <td>0.779999</td>\n",
+       "      <td>0.598298</td>\n",
+       "      <td>0.354283</td>\n",
+       "      <td>0.432082</td>\n",
+       "      <td>0.181694</td>\n",
+       "      <td>0.026786</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CARM</th>\n",
-       "      <td>0.348526</td>\n",
-       "      <td>0.370775</td>\n",
-       "      <td>0.583268</td>\n",
-       "      <td>0.450643</td>\n",
-       "      <td>0.302731</td>\n",
-       "      <td>0.008065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CARL</th>\n",
-       "      <td>0.324383</td>\n",
-       "      <td>0.336193</td>\n",
-       "      <td>0.561965</td>\n",
-       "      <td>0.501966</td>\n",
-       "      <td>0.331138</td>\n",
-       "      <td>0.008065</td>\n",
+       "      <td>0.539488</td>\n",
+       "      <td>0.545766</td>\n",
+       "      <td>0.729880</td>\n",
+       "      <td>0.620397</td>\n",
+       "      <td>0.455167</td>\n",
+       "      <td>0.397487</td>\n",
+       "      <td>0.152023</td>\n",
+       "      <td>0.053571</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               MSE       MAE      RMSE  PRECISION    RECALL      NDCG\n",
-       "A3NCF     0.492633  0.472287  0.694012   0.799321  0.224311  0.008065\n",
-       "ALFM      0.492714  0.479093  0.694209   0.799321  0.224311  0.008065\n",
-       "ANR       0.378727  0.372666  0.608295   0.488885  0.286137  0.008065\n",
-       "CARL      0.324383  0.336193  0.561965   0.501966  0.331138  0.008065\n",
-       "CARP      0.301829  0.315592  0.541544   0.511101  0.366385  0.008065\n",
-       "D_ATTN    0.347469  0.347267  0.582711   0.480901  0.303541  0.008065\n",
-       "DAML      0.382040  0.403402  0.541493   0.685174  0.614226  0.142857\n",
-       "DeepCoNN  0.346628  0.384375  0.582662   0.462725  0.318944  0.008065\n",
-       "HRDR      0.320256  0.336097  0.558634   0.497728  0.332630  0.008065\n",
-       "MPCN      0.405369  0.421038  0.629690   0.525309  0.260806  0.008065\n",
-       "NARRE     0.320794  0.344617  0.559243   0.497137  0.345259  0.008065\n",
-       "ConvMF    0.410501  0.452003  0.634435   0.524938  0.274006  0.008065\n",
-       "TARMF     0.375877  0.460916  0.608146   0.460487  0.338542  0.008065\n",
-       "CARM      0.348526  0.370775  0.583268   0.450643  0.302731  0.008065\n",
-       "CARL      0.324383  0.336193  0.561965   0.501966  0.331138  0.008065"
+       "               MSE       MAE      RMSE  PRECISION    RECALL      NDCG  \\\n",
+       "DeepCoNN  0.093489  0.215620  0.302413   0.825238  0.831091  0.351415   \n",
+       "TARMF     0.146350  0.279438  0.378518   0.726705  0.717131  0.355217   \n",
+       "ConvMF    0.617585  0.613137  0.779999   0.598298  0.354283  0.432082   \n",
+       "CARM      0.539488  0.545766  0.729880   0.620397  0.455167  0.397487   \n",
+       "\n",
+       "          DIVERSITY   NOVELTY  \n",
+       "DeepCoNN   0.099673  0.017857  \n",
+       "TARMF      0.101449  0.026786  \n",
+       "ConvMF     0.181694  0.026786  \n",
+       "CARM       0.152023  0.053571  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "algorithms = [\"A3NCF\", \"ALFM\", \"ANR\", \"CARL\", \"CARP\", \"D_ATTN\",\n",
-    "              \"DAML\", \"DeepCoNN\", \"HRDR\", \"MPCN\", \"NARRE\",\n",
-    "              \"ConvMF\", \"TARMF\", \"CARM\", \"CARL\"]\n",
+    "# algorithms = [\"A3NCF\", \"ALFM\", \"ANR\", \"CARL\", \"CARP\", \"D_ATTN\",\n",
+    "#               \"DAML\", \"DeepCoNN\", \"HRDR\", \"MPCN\", \"NARRE\",\n",
+    "#               \"ConvMF\", \"TARMF\", \"CARM\", \"CARL\"]\n",
     "\n",
-    "load_error_and_rank_metrics(algorithms, \"Digital_Music_data\", \"word2vec\")"
+    "algorithms = [\n",
+    "              \"DeepCoNN\", \"TARMF\", \"ConvMF\", \"CARM\"]\n",
+    "\n",
+    "load_error_and_rank_metrics(algorithms, \"AMAZON_FASHION_data\", \"word2vec\")"
    ]
   },
   {
