--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1887,11 +1887,155 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Results Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mse          0.409077\n",
+       "mae          0.414698\n",
+       "rmse         0.632321\n",
+       "precision    0.525940\n",
+       "recall       0.251250\n",
+       "diversity    0.363831\n",
+       "novelty      0.047249\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv(\"results/NARRE_FineTunning_Digital_Music_data_word2vec_results_error.csv\").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ndcg    0.016129\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv(\"results/NARRE_FineTunning_Digital_Music_data_word2vec_results_rank.csv\").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mse          0.409110\n",
+       "mae          0.408731\n",
+       "rmse         0.632231\n",
+       "precision    0.526272\n",
+       "recall       0.248884\n",
+       "diversity    0.366824\n",
+       "novelty      0.048234\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv(\"results/NARRE_ZeroShot_Digital_Music_data_word2vec_results_error.csv\").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ndcg    0.016129\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv(\"results/NARRE_ZeroShot_Digital_Music_data_word2vec_results_rank.csv\").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mse          0.349557\n",
+       "mae          0.362975\n",
+       "rmse         0.584723\n",
+       "precision    0.494619\n",
+       "recall       0.293519\n",
+       "diversity    0.365461\n",
+       "novelty      0.042576\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv(\"results/NARRE_Digital_Music_data_word2vec_results_error.csv\").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ndcg    0.016129\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv(\"results/NARRE_Digital_Music_data_word2vec_results_rank.csv\").mean()"
+   ]
   }
  ],
  "metadata": {
