Update Preprocess Script

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,51 +94,51 @@
     "\n",
     "            metrics_matrix.append(values)\n",
     "\n",
-    "    # for i, (alg1, alg2) in enumerate(zip(alg_name_1, alg_name_2)):\n",
+    "    for i, (alg1, alg2) in enumerate(zip(alg_name_1, alg_name_2)):\n",
     "        \n",
-    "    #     alg1_metrics_error = pd.read_csv(\n",
-    "    #             path + alg1 + \"_\" + dataset + \"_\" + emb + \"_results_error.csv\").values.transpose()\n",
+    "        alg1_metrics_error = pd.read_csv(\n",
+    "                path + alg1 + \"_\" + dataset + \"_\" + emb + \"_results_error.csv\").values.transpose()\n",
     "            \n",
-    "    #     alg1_metrics_rank = pd.read_csv(\n",
-    "    #             path + alg1 + \"_\" + dataset + \"_\" + emb + \"_results_rank.csv\").values.transpose()\n",
+    "        alg1_metrics_rank = pd.read_csv(\n",
+    "                path + alg1 + \"_\" + dataset + \"_\" + emb + \"_results_rank.csv\").values.transpose()\n",
     "        \n",
-    "    #     alg2_metrics_error = pd.read_csv(\n",
-    "    #             path + alg2 + \"_\" + dataset + \"_\" + emb + \"_results_error.csv\").values.transpose()\n",
+    "        alg2_metrics_error = pd.read_csv(\n",
+    "                path + alg2 + \"_\" + dataset + \"_\" + emb + \"_results_error.csv\").values.transpose()\n",
     "            \n",
-    "    #     alg2_metrics_rank = pd.read_csv(\n",
-    "    #             path + alg2 + \"_\" + dataset + \"_\" + emb + \"_results_rank.csv\").values.transpose()\n",
+    "        alg2_metrics_rank = pd.read_csv(\n",
+    "                path + alg2 + \"_\" + dataset + \"_\" + emb + \"_results_rank.csv\").values.transpose()\n",
     "        \n",
-    "    #     if i < 7:\n",
-    "    #         alg1_metric = alg1_metrics_error[i]\n",
-    "    #         alg2_metric = alg2_metrics_error[i]\n",
-    "    #     else:\n",
-    "    #         alg1_metric = alg1_metrics_rank[0]\n",
-    "    #         alg2_metric = alg2_metrics_rank[0]\n",
+    "        if i < 7:\n",
+    "            alg1_metric = alg1_metrics_error[i]\n",
+    "            alg2_metric = alg2_metrics_error[i]\n",
+    "        else:\n",
+    "            alg1_metric = alg1_metrics_rank[0]\n",
+    "            alg2_metric = alg2_metrics_rank[0]\n",
     "\n",
-    "    #     if len(alg1_metric) > lenght:\n",
-    "    #         alg1_metric = regulate_metrics(alg1_metric, lenght)\n",
-    "    #     if len(alg2_metric) > lenght:\n",
-    "    #         alg2_metric = regulate_metrics(alg2_metric, lenght)\n",
+    "        if len(alg1_metric) > lenght:\n",
+    "            alg1_metric = regulate_metrics(alg1_metric, lenght)\n",
+    "        if len(alg2_metric) > lenght:\n",
+    "            alg2_metric = regulate_metrics(alg2_metric, lenght)\n",
     "\n",
-    "    #     if not (np.array(alg1_metric) - np.array(alg2_metric)).any():\n",
-    "    #         test = 0.0\n",
-    "    #     else:\n",
-    "    #         test = wilcoxon(alg1_metric, alg2_metric).pvalue\n",
+    "        if not (np.array(alg1_metric) - np.array(alg2_metric)).any():\n",
+    "            test = 0.0\n",
+    "        else:\n",
+    "            test = wilcoxon(alg1_metric, alg2_metric).pvalue\n",
     "            \n",
-    "    #     if test < 0.05:\n",
-    "    #         draw.append('Draw')\n",
-    "    #     else:\n",
-    "    #         draw.append('Winner')\n",
+    "        if test < 0.05:\n",
+    "            draw.append('Draw')\n",
+    "        else:\n",
+    "            draw.append('Winner')\n",
     "\n",
     "\n",
     "    df = pd.DataFrame(np.array(metrics_matrix),\n",
     "                      columns=labels, index=algorithms)\n",
     "    \n",
-    "    # rank = pd.DataFrame({\"Metric\": labels,\n",
-    "    #                     \"Winner\":alg_name_1,\n",
-    "    #                      \"2 Place\": alg_name_2,\n",
-    "    #                      \"Draw\": draw})\n",
-    "    rank = []\n",
+    "    rank = pd.DataFrame({\"Metric\": labels,\n",
+    "                        \"Winner\":alg_name_1,\n",
+    "                         \"2 Place\": alg_name_2,\n",
+    "                         \"Draw\": draw})\n",
+    "    # rank = []\n",
     "\n",
     "    return df.round(3), rank\n",
     "    \n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "NDCG          0.008   0.016  0.032  0.032  0.000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,6 +270,26 @@
     "\n",
     "df, draw = load_error_and_rank_metrics(algorithms, \"Digital_Music_data\", \"word2vec\", 3)\n",
     "df.transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "draw"
    ]
   },
   {
